--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -16,9 +16,12 @@ on:
   workflow_dispatch:
 
 env:
-  CF_KV_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/storage/kv/namespaces/${{secrets.CF_NAMESPACE_ID}}/values
+  CF_KV_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/storage/kv/namespaces/${{secrets.CF_NAMESPACE_ID || vars.CF_NAMESPACE_ID}}/values
+  CF_API_TOKEN: ${{secrets.CF_API_TOKEN}}
+  CF_NAMESPACE_ID: ${{secrets.CF_NAMESPACE_ID || vars.CF_NAMESPACE_ID}}
   PING_API: https://api.globalping.io/v1/measurements
-  PING_LIMIT: 3
+  PING_LIMIT: ${{vars.PING_COUNTRY || 3}}
+  PING_COUNTRY: ${{vars.PING_COUNTRY || 'HK'}}
   PROXYS: proxys
   PROXYS_BAK: proxys_bak
   PROXYS_UPDATED: proxys_updated
@@ -27,6 +30,7 @@ env:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
+  if: ${{secrets.CF_ACCOUNT_ID && secrets.CF_API_TOKEN && env.CF_NAMESPACE_ID}}
   # This workflow contains a single job called "build"
   update-ip:
     # The type of runner that the job will run on
@@ -56,13 +60,13 @@ jobs:
       - name: backup original data, merge
         run: |
           for key in $PROXYS_BAK $PROXYS; do
-            ret=`curl -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" "$CF_KV_API/$key"`
+            ret=`curl -H "Authorization:Bearer $CF_API_TOKEN" "$CF_KV_API/$key"`
             if echo "$ret"|grep error; then
               echo $ret
             elif [ ! -z "$ret" ] && ! echo "$ret"|grep '443":[]' ]; then
               echo "$ret" |tr -d '{"[]}'|sed -r 's/, ?/\n/g'|sed -r '/^\w*:$/d'|sed -r 's/^\w*:([\d\.]*)/\1/' >> ip.txt
               if [ $key == $PROXYS ]; then
-                curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" -d "$ret" "$CF_KV_API/$PROXYS_BAK"
+                curl -X PUT -H "Authorization:Bearer $CF_API_TOKEN" -d "$ret" "$CF_KV_API/$PROXYS_BAK"
               fi
             fi
           done
@@ -78,7 +82,7 @@ jobs:
             [ -z $1 ] && echo 'error: no ip' && return
             local ip=$1
             local url=`curl -H "content-type: application/json" -A "$UA" \
-              -d '{"type":"ping","target":"'$ip'","locations":[{"country":"HK","limit":2}]}' \
+              -d '{"type":"ping","target":"'$ip'","locations":[{"country":"'$PING_COUNTRY'","limit":'$PING_LIMIT'}]}' \
               -si "$PING_API"|grep location|awk '{print $2}'|tr -d '\n\r'`
             sleep 1
             while true; do
@@ -102,7 +106,7 @@ jobs:
             [ -z "$port" ] && port=443
             [ $port -eq 443 ] && protocol=https
             local url=`curl -H "content-type: application/json" -A "$UA" \
-              -d '{"type":"http","target":"'$ip'","locations":[{"country":"HK","limit":'$PING_LIMIT'}],"measurementOptions":{"port":"'$port'","protocol":"'$protocol'"}}' \
+              -d '{"type":"http","target":"'$ip'","locations":[{"country":"'$PING_COUNTRY'","limit":'$PING_LIMIT'}],"measurementOptions":{"port":"'$port'","protocol":"'$protocol'"}}' \
               -si "$PING_API"|grep location|awk '{print $2}'|tr -d '\n\r'`
             sleep 1
             while true; do
@@ -138,7 +142,7 @@ jobs:
             local ip=$1 port=443
             # https://api.openai.com/compliance/cookie_requirements 
             local url=`curl -H "content-type: application/json" -A "$UA" \
-              -d '{"type":"http","target":"'$ip'","locations":[{"country":"HK","limit":'$PING_LIMIT'}],"measurementOptions":{"port":'$port',"protocol":"https","request":{"method":"GET","host":"android.chat.openai.com","path":"/public-api/mobile/server_status/v1"}}}' \
+              -d '{"type":"http","target":"'$ip'","locations":[{"country":"'$PING_COUNTRY'","limit":'$PING_LIMIT'}],"measurementOptions":{"port":'$port',"protocol":"https","request":{"method":"GET","host":"android.chat.openai.com","path":"/public-api/mobile/server_status/v1"}}}' \
               -si "$PING_API"|grep location|awk '{print $2}'|tr -d '\n\r'`
             [ -z $url ] && echo 'error: no url' && exit 1
             sleep 1
@@ -196,9 +200,9 @@ jobs:
             fi
           done
           data={$data}
-          curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
+          curl -X PUT -H "Authorization:Bearer $CF_API_TOKEN" \
             -d "$data" "$CF_KV_API/$PROXYS" >> $GITHUB_STEP_SUMMARY
-          curl -X PUT -H "Authorization:Bearer ${{secrets.CF_API_TOKEN}}" \
+          curl -X PUT -H "Authorization:Bearer $CF_API_TOKEN" \
             -d "`date +%s`" "$CF_KV_API/$PROXYS_UPDATED"
           echo "data=$data" >> $GITHUB_OUTPUT
           
