--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -90,11 +90,10 @@ env:
 jobs:
   # This workflow contains a single job called "build"
   build-deploy:
-    if: ${{secrets.CF_ACCOUNT_ID && env.CF_API_TOKEN && env.CF_NAMESPACE_ID }}
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
-      CF_KV_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/storage/kv/namespaces/${{CF_NAMESPACE_ID}}/values
+      CF_KV_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/storage/kv/namespaces/$CF_NAMESPACE_ID/values
       CF_PAGE_ENV: ${{env.pageBranch == 'main' && 'production' || 'preview'}}
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -107,7 +106,7 @@ jobs:
       - id: get-data
         name: get cfhost, merge, backup
         run: |
-          #[ -z ${{secrets.CF_ACCOUNT_ID}} ] || [ -z ${{secrets.CF_API_TOKEN}} ] || [ -z ${{secrets.CF_NAMESPACE_ID}} ] && echo "secrets required!" && exit 111;
+          [ -z ${{secrets.CF_ACCOUNT_ID}} ] || [ -z $CF_API_TOKEN ] || [ -z $CF_NAMESPACE_ID ] && echo "secrets and CF_NAMESPACE_ID required!" && exit 1;
           merge_backup(){
             local ret=`curl -H "Authorization:Bearer $CF_API_TOKEN" "$CF_KV_API/$1"`
             if echo "$ret"|grep error; then
