--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -16,7 +16,6 @@ on:
   workflow_dispatch:
 
 env:
-  CF_KV_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/storage/kv/namespaces/${{secrets.CF_NAMESPACE_ID || vars.CF_NAMESPACE_ID}}/values
   CF_API_TOKEN: ${{secrets.CF_API_TOKEN}}
   CF_NAMESPACE_ID: ${{secrets.CF_NAMESPACE_ID || vars.CF_NAMESPACE_ID}}
   PING_API: https://api.globalping.io/v1/measurements
@@ -30,9 +29,10 @@ env:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  if: ${{secrets.CF_ACCOUNT_ID && secrets.CF_API_TOKEN && env.CF_NAMESPACE_ID}}
   # This workflow contains a single job called "build"
   update-ip:
+    env:
+      CF_KV_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/storage/kv/namespaces/$CF_NAMESPACE_ID/values
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     outputs:
@@ -52,6 +52,7 @@ jobs:
       #    echo test, and deploy your project.
       - name: download ip zip file, unzip, merge, uniq
         run: |
+          [ -z ${{secrets.CF_ACCOUNT_ID}} ] || [ -z $CF_API_TOKEN ] || [ -z $CF_NAMESPACE_ID ] && echo "secrets and CF_NAMESPACE_ID required!" && exit 1;
           curl -o ip.zip https://zip.baipiao.eu.org
           unzip ip.zip -d ip
           cat ip/*.txt | sort | uniq > ip.txt
