add vars and refactor deploy code

--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -71,10 +71,11 @@ env:
   CF_SCRIPT_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/workers/scripts
   CF_SERVICE_API: https://api.cloudflare.com/client/v4/accounts/${secrets.CF_ACCOUNT_ID}/workers/services
   CF_PROJECT_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/pages/projects
+  CF_KV_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID || vars.CF_NAMESPACE_ID}}/storage/kv/namespaces/$CF_NAMESPACE_ID/values
   CF_API_TOKEN: ${{secrets.CF_API_TOKEN}}
+  CF_NAMESPACE_ID: ${{secrets.CF_NAMESPACE_ID || vars.CF_NAMESPACE_ID}}
   CF_WORKER_UUID: ${{secrets.CF_WORKER_UUID}}
   CF_PAGE_UUID: ${{secrets.CF_PAGE_UUID}}
-  CF_NAMESPACE_ID: ${{secrets.CF_NAMESPACE_ID || vars.CF_NAMESPACE_ID}}
   
   CFHOST: cfhost
   CFHOST_BAK: cfhost_bak
@@ -92,9 +93,6 @@ jobs:
   build-deploy:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    env:
-      CF_KV_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/storage/kv/namespaces/$CF_NAMESPACE_ID/values
-      CF_PAGE_ENV: $pageBranch == 'main' && 'production' || 'preview'
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -190,4 +188,6 @@ jobs:
           npm run esbuild
           
       - name: deploy worker, page
+        env:
+          CF_PAGE_ENV: ${{env.pageBranch == 'main' && 'production' || 'preview'}}
         run: ./deploy.sh
