add vars and refactor deploy code

--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -69,9 +69,9 @@ env:
   EVENT_NAME: ${{github.event_name}}
   
   CF_SCRIPT_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/workers/scripts
-  CF_SERVICE_API: https://api.cloudflare.com/client/v4/accounts/${secrets.CF_ACCOUNT_ID}/workers/services
+  CF_SERVICE_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/workers/services
   CF_PROJECT_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/pages/projects
-  CF_KV_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID || vars.CF_NAMESPACE_ID}}/storage/kv/namespaces/$CF_NAMESPACE_ID/values
+  CF_KV_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/storage/kv/namespaces/${{secrets.CF_ACCOUNT_ID || vars.CF_NAMESPACE_ID}}/values
   CF_API_TOKEN: ${{secrets.CF_API_TOKEN}}
   CF_NAMESPACE_ID: ${{secrets.CF_NAMESPACE_ID || vars.CF_NAMESPACE_ID}}
   CF_WORKER_UUID: ${{secrets.CF_WORKER_UUID}}
