--- a/.github/workflows/update_host.yml
+++ b/.github/workflows/update_host.yml
@@ -107,6 +107,7 @@ jobs:
           [ -z ${{secrets.CF_ACCOUNT_ID}} ] || [ -z $CF_API_TOKEN ] || [ -z $CF_NAMESPACE_ID ] && echo "secrets and CF_NAMESPACE_ID required!" && exit 1;
           merge_backup(){
             local ret=`curl -H "Authorization:Bearer $CF_API_TOKEN" "$CF_KV_API/$1"`
+            echo "-$ret-"
             if echo "$ret"|grep error; then
               echo "$ret"|grep 'namespace not found' && exit 1
             elif [ ! -z "$ret" ] && [ "$ret" != "[]" ]; then
@@ -116,6 +117,7 @@ jobs:
               echo $ret|tr -d '[]'|sed -r 's/, ?/\n/g' > tmp.txt
               
               local bak=`curl -H "Authorization:Bearer $CF_API_TOKEN" "$CF_KV_API/$2"`
+              echo "--$bak--"
               if ! echo "$bak"|grep error && [ ! -z "$bak" ] && [ "$bak" != "[]" ]; then
                 echo $bak|tr -d '[]'|sed -r 's/, ?/\n/g' >> tmp.txt
                 ret=[$(echo `cat tmp.txt|sort -u`|tr -s ' ' ',')]
