--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -53,8 +53,9 @@ jobs:
           host='speed.cloudflare.com'
           if [ ! -z '${{ inputs.ip }}' ]; then
             for ip in ${{ inputs.ip }}; do
-              echo $ip
-              curl --connect-timeout 5 --resolve $host:443:$ip https://$host/cdn-cgi/trace
-              curl --connect-timeout 5 -x $ip:443 https://$host/cdn-cgi/trace
+              echo ip=$ip
+              curl --connect-timeout 5 --resolve $host:443:$ip https://$host/cdn-cgi/trace 2>&1
+              curl --connect-timeout 5 -x $ip:443 https://$host/cdn-cgi/trace 2>&1
+              echo ----
             done
           fi
