--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,12 +51,15 @@ jobs:
       - name: curl proxy test
         run: |
           set +e
-          host='speed.cloudflare.com'
+          host1='speed.cloudflare.com'; path1='/cdn-cgi/trace'
+          host2='android.chat.openai.com'; path2='/public-api/mobile/server_status/v1'
+          curl http://ip.sb
           if [ ! -z '${{ inputs.ip }}' ]; then
             for ip in ${{ inputs.ip }}; do
               echo ip=$ip
-              curl --connect-timeout 5 --resolve $host:443:$ip https://$host/cdn-cgi/trace 2>&1
-              curl --connect-timeout 5 -x $ip:443 https://$host/cdn-cgi/trace 2>&1
+              if curl -I --connect-timeout 5 --resolve $host1:443:$ip https://$host1$path1 2>&1; then
+                curl --connect-timeout 5 --resolve $host2:443:$ip https://$host2$path2 2>&1
+              fi
             done
             echo 'finished'
           fi
