--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -57,8 +57,8 @@ jobs:
           if [ ! -z '${{ inputs.ip }}' ]; then
             for ip in ${{ inputs.ip }}; do
               echo ip=$ip
-              if curl -I --connect-timeout 5 --resolve $host1:443:$ip https://$host1$path1 2>&1; then
-                r=`curl --connect-timeout 5 -i --resolve $host2:443:$ip https://$host2$path2 2>&1`
+              if curl -s -I --connect-timeout 5 --resolve $host1:443:$ip https://$host1$path1 2>&1; then
+                r=`curl -s -w '%{http_code}' --connect-timeout 5 --resolve $host2:443:$ip https://$host2$path2 2>&1`
                 echo $r;
               fi
             done
