--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,15 +51,16 @@ jobs:
       - name: curl proxy test
         run: |
           set +e
+          bc --help
           host1='speed.cloudflare.com'; path1='/cdn-cgi/trace'
           host2='android.chat.openai.com'; path2='/public-api/mobile/server_status/v1'
           curl http://ip.sb
           if [ ! -z '${{ inputs.ip }}' ]; then
             for ip in ${{ inputs.ip }}; do
               echo ip=$ip
-              if curl -s -I --connect-timeout 5 --resolve $host1:443:$ip https://$host1$path1 2>&1; then
-                r=`curl -s -w '%{http_code}' --connect-timeout 5 --resolve $host2:443:$ip https://$host2$path2 2>&1`
-                echo $r;
+              if curl -so /dev/null -I --connect-timeout 5 --resolve $host1:443:$ip https://$host1$path1; then
+                r=`curl -s -w '\n%{http_code}' --connect-timeout 5 --retry 1 --resolve $host2:443:$ip https://$host2$path2`
+                echo $? $r;
               fi
             done
             echo 'finished'
