--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -59,7 +59,7 @@ jobs:
             ret=`curl -H "Authorization:Bearer $CF_API_TOKEN" "$CF_KV_API/$key"`
             if echo "$ret"|grep error; then
               grep 'namespace not found' <<< "$ret" && exit 1 || echo "$ret"
-            elif [ ! -z "$ret" ] && ! echo "$ret"|grep '443":[]' ]; then
+            elif [ ! -z "$ret" ] && ! echo "$ret"|grep '443":\[\]' ]; then
               echo "$ret" |tr -d '{"[]}'|sed -r 's/, ?/\n/g'|sed -r '/^\w*:$/d'|sed -r 's/^\w*:([\d\.]*)/\1/' >> ip.txt
               if [ $key == $PROXYS ]; then
                 curl -X PUT -H "Authorization:Bearer $CF_API_TOKEN" -d "$ret" "$CF_KV_API/$PROXYS_BAK"
@@ -177,10 +177,12 @@ jobs:
             local ip=$1 port=443 p=https
             local r=`curl --connect-timeout 5 -s -w ' code=%{http_code} time=%{time_connect}' --resolve $OPENAI_HOST:$port:$ip $p://$OPENAI_URL`
             eval `echo $r|sed -r 's/^.*(code=.*)$/local \1/'`
-            if [ ! -z $code ] && [ $code != 000 ]; then
-              #local ms=`echo "scale=0; $time*1000/1" | bc`
-              echo $ip:$port $r
-              [ $code = 200 ] && echo $ip >> ipopenai.txt
+            #local ms=`echo "scale=0; $time*1000/1" | bc`
+            [ ! -z $code ] && [ $code != 000 ] && echo $ip:$port $r
+            if [ $code = 200 ]; then
+              echo $ip >> ipopenai.txt
+            elif [ $code != 400 ] || echo "$r"|grep 'html'; then
+              sed -i '/'$ip'/d' ip$port.txt
             fi
           }
           
