--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -5,7 +5,9 @@ name: IP Workflow
 # Controls when the workflow will run
 on:
   schedule:
-    - cron: "30 3 * * *"
+    - name: ipupdate
+      cron: "0 0 * * *"
+    - cron: "21 13 * * *"
   # Triggers the workflow on push or pull request events but only for the "main" branch
   #push:
   #  branches: [ "main" ]
@@ -43,7 +45,9 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v4
+      
       - name: download ip zip file, unzip, merge, uniq
+        if: ${{github.event.schedule.name == 'ipupdate'}}
         run: |
           [ -z ${{secrets.CF_ACCOUNT_ID}} ] || [ -z $CF_API_TOKEN ] || [ -z $CF_NAMESPACE_ID ] && echo "secrets and CF_NAMESPACE_ID required!" && exit 1;
           #curl -o ip.zip https://zip.baipiao.eu.org
@@ -59,7 +63,7 @@ jobs:
             ret=`curl -H "Authorization:Bearer $CF_API_TOKEN" "$CF_KV_API/$key"`
             if echo "$ret"|grep error; then
               grep 'namespace not found' <<< "$ret" && exit 1 || echo "$ret"
-            elif [ ! -z "$ret" ] && ! echo "$ret"|grep '443":\[\]' ]; then
+            elif [ ! -z "$ret" ] && ! echo "$ret"|grep '443":\[\]'; then
               echo "$ret" |tr -d '{"[]}'|sed -r 's/, ?/\n/g'|sed -r '/^\w*:$/d'|sed -r 's/^\w*:([\d\.]*)/\1/' >> ip.txt
               if [ $key == $PROXYS ]; then
                 curl -X PUT -H "Authorization:Bearer $CF_API_TOKEN" -d "$ret" "$CF_KV_API/$PROXYS_BAK"
@@ -74,7 +78,7 @@ jobs:
       - name: http test, filter
         run: |
           set +e
-          UA="Mozilla/5.0 Chrome/107.0.0.0 Safari/537.36"
+          UA="Mozilla/5.0 (Linux; Android 11; Pixel 5) AppleWebKit/537.36 Chrome/107.0.0.0 Mobile Safari/537.36"
           TRACE_URL="$TRACE_HOST$TRACE_PATH"
           OPENAI_HOST='android.chat.openai.com'; OPENAI_PATH='/public-api/mobile/server_status/v1'; 
           OPENAI_URL="$OPENAI_HOST$OPENAI_PATH"
@@ -163,7 +167,8 @@ jobs:
             local ip=$1 port=$2 p=http
             [ -z "$2" ] && port=443
             [ $port -eq 443 ] && p=https
-            eval `curl -I --connect-timeout 5 -so /dev/null -w 'local code=%{http_code} time=%{time_connect}' --resolve $TRACE_HOST:$port:$ip $p://$TRACE_URL`
+            eval `curl -I --connect-timeout 5 -so /dev/null -w 'local code=%{http_code} time=%{time_connect}' --connect-to $TRACE_HOST:$port:$ip:$port $p://$TRACE_URL`
+            
             if [ "$code" = 200 ]; then
               local ms=`echo "scale=0; $time*1000/1" | bc`
               if [ $ms -gt 0 ] && [ $ms -lt $HTTP_DELAY ]; then
@@ -175,7 +180,7 @@ jobs:
           probe_openai(){
             [ -z $1 ] && echo 'error: no ip' && return
             local ip=$1 port=443 p=https
-            local r=`curl --connect-timeout 5 -s -w ' code=%{http_code} time=%{time_connect}' --resolve $OPENAI_HOST:$port:$ip $p://$OPENAI_URL`
+            local r=`curl -A "UA" --connect-timeout 5 -s -w ' code=%{http_code} time=%{time_connect}' --connect-to $OPENAI_HOST:$port:$ip:$port $p://$OPENAI_URL`
             eval `echo $r|sed -r 's/^.*(code=.*)$/local \1/'`
             #local ms=`echo "scale=0; $time*1000/1" | bc`
             [ ! -z $code ] && [ $code != 000 ] && echo $ip:$port $r
