--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -5,9 +5,8 @@ name: IP Workflow
 # Controls when the workflow will run
 on:
   schedule:
-    - name: ipupdate
-      cron: "0 0 * * *"
-    - cron: "21 13 * * *"
+    - cron: "0 23 * * *"
+    - cron: "0 5,10 * * *"
   # Triggers the workflow on push or pull request events but only for the "main" branch
   #push:
   #  branches: [ "main" ]
@@ -47,7 +46,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: download ip zip file, unzip, merge, uniq
-        if: ${{github.event.schedule.name == 'ipupdate'}}
+        if: ${{ ! contains(github.event.schedule, '/') && ! contains(github.event.schedule, ',') }}
         run: |
           [ -z ${{secrets.CF_ACCOUNT_ID}} ] || [ -z $CF_API_TOKEN ] || [ -z $CF_NAMESPACE_ID ] && echo "secrets and CF_NAMESPACE_ID required!" && exit 1;
           #curl -o ip.zip https://zip.baipiao.eu.org
@@ -241,3 +240,11 @@ jobs:
     with:
       proxys: ${{ needs.update-ip.outputs.data }}
     secrets: inherit
+    
+  workflow-keepalive:
+    if: ${{ github.event_name == 'schedule' }}
+    runs-on: ubuntu-latest
+    permissions:
+      actions: write
+    steps:
+      - uses: liskin/gh-workflow-keepalive@v1
