--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -6,7 +6,7 @@ name: IP Workflow
 on:
   schedule:
     - cron: "0 23 * * *"
-    - cron: "0 5,10 * * *"
+    - cron: "0 4,9,14 * * *"
   # Triggers the workflow on push or pull request events but only for the "main" branch
   #push:
   #  branches: [ "main" ]
@@ -15,8 +15,18 @@ on:
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    inputs:
+      downloadUpdatedIP:
+        description: 'download the daily updated IP data from baipiao.eu.org first before merging the IP data'
+        required: false
+        default: true
+        type: choice
+        options:
+          - true
+          - false
 
 env:
+  downloadUpdatedIP: ${{inputs.downloadUpdatedIPFirst != 'false'}}
   CF_API_TOKEN: ${{secrets.CF_API_TOKEN}}
   CF_NAMESPACE_ID: ${{secrets.CF_NAMESPACE_ID || vars.CF_NAMESPACE_ID}}
   CF_KV_API: https://api.cloudflare.com/client/v4/accounts/${{secrets.CF_ACCOUNT_ID}}/storage/kv/namespaces/${{secrets.CF_NAMESPACE_ID || vars.CF_NAMESPACE_ID}}/values
@@ -46,7 +56,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: download ip zip file, unzip, merge, uniq
-        if: ${{ ! contains(github.event.schedule, '/') && ! contains(github.event.schedule, ',') }}
+        if: ${{ ! contains(github.event.schedule, '/') && ! contains(github.event.schedule, ',') || $downloadUpdatedIP == 'true' }}
         run: |
           [ -z ${{secrets.CF_ACCOUNT_ID}} ] || [ -z $CF_API_TOKEN ] || [ -z $CF_NAMESPACE_ID ] && echo "secrets and CF_NAMESPACE_ID required!" && exit 1;
           #curl -o ip.zip https://zip.baipiao.eu.org
