--- a/.github/workflows/update_ip.yml
+++ b/.github/workflows/update_ip.yml
@@ -56,7 +56,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: download ip zip file, unzip, merge, uniq
-        if: ${{ ! contains(github.event.schedule, '/') && ! contains(github.event.schedule, ',') || $downloadUpdatedIP == 'true' }}
+        if: ${{ ! contains(github.event.schedule, '/') && ! contains(github.event.schedule, ',') || env.downloadUpdatedIP == 'true' }}
         run: |
           [ -z ${{secrets.CF_ACCOUNT_ID}} ] || [ -z $CF_API_TOKEN ] || [ -z $CF_NAMESPACE_ID ] && echo "secrets and CF_NAMESPACE_ID required!" && exit 1;
           #curl -o ip.zip https://zip.baipiao.eu.org
